<resources>
    <string name="app_name">Electronics Inventory</string>
    <string name="action_settings">Settings</string>

    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!--Product info-->
    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_price">Price</string>

    <!--Supplier info-->
    <string name="category_supplier">Supplier</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="supplier_credentials">Info</string>
    <string name="hint_resupply_phone">Phone</string>
    <string name="hint_resupply_url">URL</string>

    <string name="category_quantity">Quantity</string>
    <string name="hint_quantity_in_stock">No. of items in stock</string>
    <string name="action_delete_all_entries">Delete All Products</string>

    <!--Editor titles depending on action-->
    <string name="editor_activity_title_new_product">Add Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!--Dialog options-->
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <!--Toast messages-->
    <string name="pick_image_intent_text">Select image</string>
    <string name="pick_image_intent_returned_null">No image chosen</string>
    <string name="failed_to_save_product_image">Failed to save product image</string>
    <string name="failed_to_save_temporary_product_image">Failed to save temporary product image</string>
    <string name="db_insert_product_succeeded">Product added</string>
    <string name="db_insert_product_failed">Failed to add product</string>
    <string name="db_update_product_updated">Product Saved</string>
    <string name="db_update_product_update_failed">Failed to save product</string>
    <string name="db_delete_all_products">All products deleted</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="temporary_image_loading_failed">Temporary image loading failed</string>

    <!--EmptyView text-->
    <string name="empty_view_title_text">No product in database</string>
    <string name="empty_view_subtitle_text">Add a product</string>

    <!--List item names-->
    <string name="product_name">Product name</string>
    <string name="product_price">3.40 $</string>
    <string name="product_quantity">25</string>
    <string name="in_stock">In stock</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="product_sold_successfully">Product Sold</string>
    <string name="product_sale_controls_sell_button">Sell</string>

    <!--Buttons-->
    <string name="increase_quantity_content_description">Increase quantity in stock</string>
    <string name="decrease_quantity_content_description">Decrease quantity in stock</string>
    <string name="supplier_phone_content_description">Call supplier</string>
    <string name="supplier_url_content_description">Open supplier webpage</string>

    <string name="edit_product_image_content_description">Click to change product image</string>
    <string name="product_list_image_content_description">Product Image</string>

    <!--Hints-->
    <string name="message_please_set_phone_number_first">Please set phone number first</string>
    <string name="message_please_set_url_first">Please set URL first</string>

    <!--Error messages-->
    <string name="product_validator_message_invalid_id">ID must be a non-negative integer</string>
    <string name="product_validator_message_invalid_name">Product must have a name</string>
    <string name="product_validator_message_invalid_price">Product must have a non-zero price</string>
    <string name="product_validator_message_invalid_quantity">Product must have a non-negative quantity</string>
    <string name="product_validator_message_invalid_supplier_name">Product must have a supplier name</string>
    <string name="product_validator_message_invalid_url">Product URL is invalid</string>
    <string name="product_validator_message_missing_product_image">Add image by clicking icon in the upper left corner.</string>
    <string name="product_has_missing_or_invalid_arguments">Product has missing or invalid arguments</string>
    <string name="error_message_no_activity_to_place_call">Could not find an activity to place the call</string>
    <string name="error_message_no_permission_to_place_call">No permission to place call</string>
    <string name="error_message_no_activity_to_open_url">Could not find an activity to open URL</string>
    <string name="error_message_malformed_url">Malformed URL</string>

</resources>